--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="estilos/style.css">
     <link rel="stylesheet" href="estilos/media-query.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <title>Tela de Login</title>
 </head>
 <body>
@@ -17,8 +18,17 @@
             <div id="formulario">
                 <h1>Login</h1>
                 <p>Seja bem-vindo(a) de volta. Faça login para acessar sua conta e poder configurar seu ambiente</p>
-                <form action="login.php" method="post">
-                    
+                <form action="login.php" method="post" autocomplete="on">
+                    <div class="campo">
+                        <label for="ilogin"><i class="material-icons">person</i></label>
+                        <input type="email" name="login" id="ilogin" placeholder="Seu email aqui..." autocomplete="email" required maxlength="30">
+                    </div>
+                    <div class="campo">
+                        <label for="isenha"><i class="material-icons">vpn_key</i></label>
+                        <input type="password" name="senha" id="isenha" placeholder="Sua senha aqui..." autocomplete="current-password" required minlength="8" maxlength="16">
+                    </div>
+                    <input type="submit" value="Entrar">
+                    <a href="#">Esqueci minha senha<i class="material-icons">mail</i></a>
                 </form>
             </div>
         </section>
