formatação do formulário

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                         <input type="password" name="senha" id="isenha" placeholder="Sua senha aqui..." autocomplete="current-password" required minlength="8" maxlength="16">
                     </div>
                     <input type="submit" value="Entrar">
-                    <a href="#">Esqueci minha senha<i class="material-icons">mail</i></a>
+                    <a href="#" class="botao">Esqueci minha senha<i class="material-icons">mail</i></a>
                 </form>
             </div>
         </section>
