--- a/index.html
+++ b/index.html
@@ -20,12 +20,14 @@
                 <p>Seja bem-vindo(a) de volta. Faça login para acessar sua conta e poder configurar seu ambiente</p>
                 <form action="login.php" method="post" autocomplete="on">
                     <div class="campo">
-                        <label for="ilogin"><i class="material-icons">person</i></label>
+                        <i class="material-icons">person</i>
                         <input type="email" name="login" id="ilogin" placeholder="Seu email aqui..." autocomplete="email" required maxlength="30">
+                        <label for="ilogin">Login</label>
                     </div>
                     <div class="campo">
-                        <label for="isenha"><i class="material-icons">vpn_key</i></label>
+                        <i class="material-icons">vpn_key</i>
                         <input type="password" name="senha" id="isenha" placeholder="Sua senha aqui..." autocomplete="current-password" required minlength="8" maxlength="16">
+                        <label for="isenha">Senha</label>
                     </div>
                     <input type="submit" value="Entrar">
                     <a href="#" class="botao">Esqueci minha senha<i class="material-icons">mail</i></a>
